# miden-debug

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml
docs/: Usage.md
src/: config.rs  felt.rs  input.rs  lib.rs  linker.rs  logger.rs  main.rs  state.rs
src/debug/: breakpoint.rs  memory.rs  mod.rs  native_ptr.rs  stacktrace.rs  variables.rs
src/exec/: config.rs  executor.rs  host.rs  mod.rs  state.rs  trace.rs
src/repl/: commands.rs  mod.rs  session.rs
src/ui/: action.rs  app.rs  duration.rs  mod.rs  state.rs  syntax_highlighting.rs  tui.rs
src/ui/pages/: home.rs  mod.rs
src/ui/panes/: breakpoints.rs  debug.rs  disasm.rs  footer.rs  header.rs  mod.rs  source_code.rs  stack.rs  stacktrace.rs
