[package]
name = "miden-debug"
description = "An interactive debugger for Miden VM programs"
version = "0.4.2"
rust-version = "1.90"
authors = ["Miden contributors"]
repository = "https://github.com/0xMiden/miden-debug"
homepage = "https://github.com/0xMiden/miden-debug"
documentation = "https://github.com/0xMiden/miden-debug"
categories = ["development-tools"]
keywords = ["miden", "debugger"]
license = "MIT"
readme = "README.md"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "miden-debug"
path = "src/main.rs"
test = false
bench = false
required-features = ["tui"]

[features]
default = ["tui"]
tui = ["std", "dep:crossterm", "dep:env_logger", "dep:ratatui", "dep:tui-input", "dep:signal-hook", "dep:syntect"]
std = ["dep:glob", "clap/std", "clap/env", "miden-assembly-syntax/std"]
proptest = ["dep:proptest"]

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "std", "env", "help", "suggestions", "error-context"]}
crossterm = { version = "0.28.1", optional = true, features = ["event-stream"] }
env_logger = { version = "0.11", optional = true }
log = "0.4"
glob = { version = "0.3.1", optional = true }
miden-assembly = { git = "https://github.com/0xMiden/miden-vm", rev = "15915f9622ba6b72e2e3a78aadd15ba31bed6f9c", default-features = false }
miden-assembly-syntax = { git = "https://github.com/0xMiden/miden-vm", rev = "15915f9622ba6b72e2e3a78aadd15ba31bed6f9c", default-features = false }
miden-core = { git = "https://github.com/0xMiden/miden-vm", rev = "15915f9622ba6b72e2e3a78aadd15ba31bed6f9c", default-features = false }
miden-debug-types = { git = "https://github.com/0xMiden/miden-vm", rev = "15915f9622ba6b72e2e3a78aadd15ba31bed6f9c", default-features = false }
miden-mast-package = { git = "https://github.com/0xMiden/miden-vm", rev = "15915f9622ba6b72e2e3a78aadd15ba31bed6f9c", default-features = false }
miden-processor = { git = "https://github.com/0xMiden/miden-vm", rev = "15915f9622ba6b72e2e3a78aadd15ba31bed6f9c", default-features = false }
ratatui = { version = "0.29.0", optional = true }
rustc-demangle = { version = "0.1", features = ["std"] }
serde = { version = "1.0", default-features = false, features = [
    "serde_derive",
    "alloc",
    "rc",
] }
signal-hook = { version = "0.3.17", optional = true }
smallvec = { version = "1.14", default-features = false, features = [
    "union",
    "const_generics",
    "const_new",
    "drain_filter",
] }
syntect = { version = "5.2.0", optional = true, default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "yaml-load",
    "regex-onig",
] }
thiserror = { package = "miden-thiserror", version = "1.0" }
toml = { version = "0.8", features = ["preserve_order"] }
tui-input = { version = "0.11", optional = true }

tokio = { version = "1.39.2", features = ["rt", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
futures = "0.3.30"
proptest = { version = "1.4", optional = true }

# Pin miden-crypto to match what miden-vm v0.21.1 requires
miden-crypto = { version = "=0.22.3", default-features = false }
